# quant_env

./: .env.example  .gitignore  README.md  cfd_pipeline.ipynb  eurusd_profile.html  pyproject.toml  run.ipynb
config/: API.py  config.py  dashboard_meta.py  data_sources.py  instruments.py  paths.py  secrets.py  sessions.py  telegram.py
docs/: MarketPrep.md  Process.md
libs/: _dashboard_template.py  account.py  cfd_cost.py  dashboard.py  data_loader.py  data_manager.py  desk_card.py  indicators.py  intraday_profile.py  market_dashboard.py  market_sessions.py  market_stats.py  performance.py  pipeline.py  result_store.py  tv_chart.py
pine/: fomc_window_sigma.pine  session_segments.pine  session_sigma_bands.pine  window_sigma_projection.pine
server/: __init__.py  asset_stats.py  backtest_store.py  band_behavior.py  dates.py  db.py  main.py  marketdata.py  migrate.py  models.py  quant_stats.py  rate_table.py  scheduler.py  schemas.py  seed.py  telegram_alerts.py  utils.py
strategies/: anti_breakout.py  common.py  hull_strategy_suit.py  msb_strategy_new.py  orb_strategy.py  session_extreme_fade.py  session_sigma_strategy.py  strategy_msb.py
tests/: conftest.py  test_alerts.py  test_asset_stats.py  test_backtest_store.py  test_cfd_cost.py  test_common_trading_day.py  test_config.py  test_indicators.py  test_market_prep_api.py  test_market_prep_dst.py  test_market_prep_levels.py  test_market_prep_v2.py  test_market_sessions.py  test_news_v3.py  test_quant_stats.py  test_rate_table.py  test_session_extreme_fade.py  test_session_sigma_strategy.py
web/: index.html  (+3 more)
(+57 files in other folders)
